--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -1,7 +1,9 @@
 name: Update gist with WakaTime stats
 on:
+  push:
+    branches: [master]
   schedule:
-    - cron: "0 0 * * *"
+    - cron: "1 0 * * *"
   # Manual triggers with workflow_dispatch
   workflow_dispatch:
 jobs:
