--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -1,9 +1,7 @@
 name: Update gist with WakaTime stats
 on:
-  push:
-    branches: [master]
   schedule:
-    - cron: "1 0 * * *"
+    - cron: cron: "*/1 * * * *"
   # Manual triggers with workflow_dispatch
   workflow_dispatch:
 jobs:
